# Progetto_Laboratorio

./: Activities.cpp  Activities.h  CMakeLists.txt  Controller.cpp  Controller.h  MyApp.h  Observer.h  Register.cpp  Register.h  Subject.h  View.cpp  View.h  main.cpp
test/: ActivitiesTest.cpp  CMakeLists.txt  RegisterFixture.cpp  RegisterTest.cpp  runAllTests.cpp
test/lib/googletest/docs/: advanced.md  gmock_cook_book.md
test/lib/googletest/googlemock/include/gmock/: gmock-spec-builders.h
